<resources>
    <string name="app_name">To Do List App</string>
    <string name="add">Add</string>
    <string name="title_name">Title </string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="to_do_list">To Do List</string>
    <string name="tick">Finished</string>
    <string name="delete_task">Delete task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="no_result">No Results Found!</string>
    <string name="select_date">Select Date</string>
    <string name="date_and_time">08 Aug 2025, 02:35 PM</string>
    <string name="deadline">Deadline</string>
    <string name="share">Share</string>
</resources>