<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_bg">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_name"
        android:textColorHint="@color/lightWhite"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textColorHint="@color/lightWhite"
        android:inputType="textMultiLine"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/etDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deadline"
        android:focusable="false"
        android:inputType="date"
        android:textColorHint="@color/white"
        android:clickable="true" />


    <!-- Buttons container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            app:cornerRadius="15dp"
            android:layout_marginEnd="5dp"
            android:text="@string/add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            app:cornerRadius="15dp"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
