<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
  >

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_task_confirmation"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:paddingBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            app:cornerRadius="15dp"
            android:layout_weight="1"
            android:text="@string/no"
           />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirmDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            app:cornerRadius="15dp" />
    </LinearLayout>

</LinearLayout>
