<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:iconifiedByDefault="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:queryHint="@string/search"
        app:layout_constraintTop_toBottomOf="@id/include_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxWidth="10000dp">

    </SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvNoResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_result"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
        android:visibility="gone">
    </TextView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:contentDescription="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:src="@android:drawable/ic_input_add"
        android:backgroundTint="@color/green"
        app:tint="@android:color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>
