<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        >

        <CheckBox
            android:id="@+id/cb_done"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:buttonTint="@android:color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="3dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_name"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="15sp"
                android:layout_marginTop="1dp"
                android:textColor="@color/lightWhite" />

            <TextView
                android:id="@+id/tv_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"  />

        </LinearLayout>
        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/white"
            android:contentDescription="@string/delete_task"
            android:padding="2dp">
        </ImageView>

    </LinearLayout>

</androidx.cardview.widget.CardView>
